--- a/themes/inside/layout/index.ejs
+++ b/themes/inside/layout/index.ejs
@@ -1,6 +1,14 @@
 <!doctype html>
 <html lang="<%= config.language || 'en' %>">
 <head>
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        showProcessingMessages: false,
+        messageStyle: 'none',
+        tex2jax: { inlineMath: [['$','$']], displayMath: [['$$','$$']]}
+    })
+</script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <meta charset="utf-8">
 <title><%= title %></title>
 <base href="<%= config.root %>">
