--- a/themes/inside/layout/index.ejs
+++ b/themes/inside/layout/index.ejs
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="<%= config.language || 'en' %>">
 <head>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8637197148903783",
+    enable_page_level_ads: true
+    });
+</script>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         showProcessingMessages: false,
