--- a/themes/inside/layout/index.ejs
+++ b/themes/inside/layout/index.ejs
@@ -15,6 +15,7 @@
         tex2jax: { inlineMath: [['$','$']], displayMath: [['$$','$$']]}
     })
 </script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 <meta charset="utf-8">
 <title><%= title %></title>
@@ -38,7 +39,9 @@
 <% if (theme.ga) { %><%- ga(theme.ga) %><% } -%>
 </head>
 <body>
-<is-d2a57d></is-d2a57d>
+       
+<is-d2a57d>
+</is-d2a57d>
 <%- theme_static('js') -%>
 </body>
 </html>
